--- a/Credit_Card_Customer_Churn_Prediction.ipynb
+++ b/Credit_Card_Customer_Churn_Prediction.ipynb
@@ -6,7 +6,7 @@
       "name": "Credit Card Customer Churn Prediction.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNlySYVjc3a3OUp4L3c/2pg",
+      "authorship_tag": "ABX9TyMI1s1xSN9UYLK1VqehMZtb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -434,30 +434,34 @@
       "cell_type": "markdown",
       "source": [
         "* **Attrition_Flag**: Whether the account is closed\n",
+        "\n",
         "---\n",
-        "**<u>Demographic Data</u>**\n",
+        "\n",
         "* **Customer_Age**: Customer's Age in Years\n",
         "* **Gender**: M=Male, F=Female\n",
-        "* **Dependent_count**: Number of dependents\n",
+        "* **Dependent_count**: # of dependents\n",
         "* **Education_Level**:  Educational Qualification of the account holder\n",
         "* **Marital_Status**:  Married, Single, Divorced, Unknown\n",
         "* **Income_Category**:  Annual Income Category of the account holder\n",
+        "\n",
         "---\n",
         "\n",
         "* **Card_Category**: Product Variable-Type of Card (Blue, Silver, Gold, Platinum)\n",
+        "\n",
         "---\n",
+        "\n",
         "* **Months_on_book**: Period of relationship with bank\n",
-        "* **Total_Relationship_Count**: Total no. of products held by the customer\n",
+        "* **Total_Relationship_Count**: Total # of products held by the customer\n",
         "* **Credit_Limit**: Credit Limit on the Credit Card\n",
         "* **Total_Revolving_Bal**: Total Revolving Balance on the Credit Card\n",
         "* **Total_Trans_Amt**: Total Transaction Amount (Last 12 months)\n",
         "* **Avg_Utilization_Ratio**: Average Card Utilization Ratio\n",
+        "\n",
         "---\n",
-        "* **Months_Inactive_12_mon**: No. of months inactive in the last 12 months\n",
-        "* **Contacts_Count_12_mon**: No. of Contacts in the last 12 months\n",
         "\n",
+        "* **Months_Inactive_12_mon**: # of months inactive in the last 12 months\n",
+        "* **Contacts_Count_12_mon**: # of Contacts (Last 12 months)\n",
         "* **Avg_Open_To_Buy**: Open to Buy Credit Line (Average of last 12 months)\n",
-        "\n",
         "* **Total_Amt_Chng_Q4_Q1**: Change in Transaction Amount (Q4 over Q1)\n",
         "* **Total_Ct_Chng_Q4_Q1**: Change in Transaction Count (Q4 over Q1)\n",
         "\n",
